# nba-odds-tracker

./: .clinerules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
draft/: analyse-amelioration.md  arbitrage-clv-architecture.md  arbitrage-clv-v2.md  architecture-collecteur-auto-ordonnance.md  decision-palier-payant.md  diagnostic-anomalies-18-07.md  etat-lot2-migration.md  lot1-correctifs-resume.md  note.md  rechiffrage-final-avec-h1.md  rechiffrage-final-corrige.md  validation-finale-budget.md
scripts/: analyze_r4_distribution.py  check.sh  init_db.py  invalidate_verdict_2.py  setup_cron.sh  simulate_lot2.py  simulate_lot2_complete.py  simulate_lot2_final.py
src/analyzer/: analyzer.py  preprocessing.py  rules.py  scoring.py  verdict.py
src/collector/: __main__.py  collector.py
src/common/: config.py  db.py  logging_config.py  odds_api_client.py  results_api_client.py
src/evaluator/: __main__.py  clv.py  clv_format.py  evaluator.py  grading.py  reconcile.py  reporting.py  weekly.py
src/listener/: __main__.py  callbacks.py  handling.py  listener.py  odds.py  positions.py
src/notifier/: __main__.py  direct.py  formatting.py  notifier.py  telegram_client.py
tests/: fixtures.py  test_analyzer.py  test_collector.py  test_db.py  test_evaluator.py  test_formatting.py  test_listener.py  test_notifier.py  test_odds_api_client.py  test_preprocessing.py  test_redecision.py  test_rules.py  test_verdict.py  test_weekly_report.py
