[project]
name = "nba-odds-tracker"
version = "0.1.0"
description = "Suivi automatisé de l'évolution des cotes NBA pré-match et détection d'anomalies de marché."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",        # lecture de config.yaml
    "python-dotenv>=1.0", # chargement du fichier .env
]

# Outils de développement : groupe installé par défaut par `uv sync` / `uv run`.
[dependency-groups]
dev = [
    "pytest>=8.0",  # tests (priorité au moteur de règles, étape 1.3)
    "ruff>=0.6",    # lint (phase 2)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Chaque composant est un paquet importable par son nom (common, collector, ...).
# Ex. : `from common.db import init_db`.
[tool.hatch.build.targets.wheel]
packages = [
    "src/common",
    "src/collector",
    "src/analyzer",
    "src/notifier",
    "src/listener",
    "src/evaluator",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
